--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase-admin": "^10.0.0",
+    "mongoose": "^6.1.3",
     "socket.io": "^4.4.0",
     "web3": "^1.6.1"
   }
