--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "firebase-admin": "^10.0.0",
     "mongoose": "^6.1.3",
+    "node-cron": "^3.0.0",
     "socket.io": "^4.4.0",
     "web3": "^1.6.1"
   }
