--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
   "arrowParens": "avoid",
   "tabWidth": 2,
-  "printWidth": 80,
+  "printWidth": 120,
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "bracketSpacing": true,
+  "bracketSameLine": false
 }
