--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase-admin": "^10.0.0",
     "mongoose": "^6.1.3",
     "node-cron": "^3.0.0",
+    "redis": "^4.0.2",
     "socket.io": "^4.4.0",
     "web3": "^1.6.1"
   }
