--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write **/**/*.{js,json}",
     "nodemon": "nodemon src/index",
-    "start": "cross-env CHAIN_ENV=testnet DEBUG=app node src/index"
+    "dev": "cross-env CHAIN_ENV=testnet DEBUG=app node src/index",
+    "start": "cross-env CHAIN_ENV=mainnet DEBUG=app node src/index"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,6 @@
     "node-cron": "^3.0.0",
     "redis": "^4.0.2",
     "socket.io": "^4.4.0",
-    "web3": "^1.6.1"
+    "web3": "^1.7.0"
   }
 }
