--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write **/**/*.{js,json}",
+    "format": "prettier --write **/**/*.{ts,json}",
     "nodemon": "nodemon src/index",
     "dev": "cross-env CHAIN_ENV=testnet DEBUG=app node src/index",
     "start": "cross-env CHAIN_ENV=mainnet DEBUG=app node src/index"
@@ -22,16 +22,30 @@
   },
   "homepage": "https://github.com/Dogecoin-2-0/processes#readme",
   "dependencies": {
+    "@ethersproject/abi": "^5.6.3",
+    "@ethersproject/address": "^5.6.1",
+    "@ethersproject/bytes": "^5.6.1",
+    "@ethersproject/providers": "^5.6.8",
+    "@ethersproject/units": "^5.6.1",
     "axios": "^0.24.0",
     "cross-env": "^7.0.3",
     "debug": "^4.3.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase-admin": "^10.0.0",
-    "mongoose": "^6.1.3",
     "node-cron": "^3.0.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "ramda": "^0.28.0",
     "redis": "^4.0.2",
+    "sequelize": "^6.21.0",
     "socket.io": "^4.4.0",
     "web3": "^1.7.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.0",
+    "@types/ramda": "^0.28.14",
+    "typescript": "^4.7.3"
   }
 }
