--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.17.1",
     "firebase-admin": "^10.0.0",
     "node-cron": "^3.0.0",
+    "node-pushnotifications": "^2.0.3",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "ramda": "^0.28.0",
