--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ethersproject/abi": "^5.6.3",
     "@ethersproject/address": "^5.6.1",
     "@ethersproject/bytes": "^5.6.1",
+    "@ethersproject/constants": "^5.6.1",
     "@ethersproject/providers": "^5.6.8",
     "@ethersproject/units": "^5.6.1",
     "axios": "^0.24.0",
