--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ethersproject/address": "^5.6.1",
     "@ethersproject/bytes": "^5.6.1",
     "@ethersproject/constants": "^5.6.1",
+    "@ethersproject/hash": "^5.6.1",
     "@ethersproject/providers": "^5.6.8",
     "@ethersproject/units": "^5.6.1",
     "axios": "^0.24.0",
