--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
+    "@types/node-cron": "^3.0.2",
     "@types/node-pushnotifications": "^1.0.4",
     "@types/ramda": "^0.28.14",
     "ts-node": "^10.8.1",
